// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MissionControl, GroundControl, Sourcereel, GameSimulator, Dashboard, Grading, Team Formation and AdminPanel NavLinks do NOT render for Role.Student 1`] = `
<Blueprint6.Navbar
  className="NavigationBar secondary-navbar"
>
  <Blueprint6.NavbarGroup
    align="left"
  >
    <DesktopNavLink
      disabled={false}
      hasNotifications={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="flame"
      text="Missions"
      to="/courses/0/missions"
    />
    <DesktopNavLink
      disabled={false}
      hasNotifications={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="lightbulb"
      text="Quests"
      to="/courses/0/quests"
    />
    <DesktopNavLink
      disabled={false}
      hasNotifications={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="predictive-analysis"
      text="Paths"
      to="/courses/0/paths"
    />
    <DesktopNavLink
      disabled={false}
      hasNotifications={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="comparison"
      text="Contests"
      to="/courses/0/contests"
    />
    <DesktopNavLink
      disabled={false}
      hasNotifications={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="manual"
      text="Others"
      to="/courses/0/others"
    />
  </Blueprint6.NavbarGroup>
  <Blueprint6.NavbarGroup
    align="right"
  >
    <DesktopNavLink
      disabled={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="satellite"
      text="Ground Control"
      to="/courses/0/groundcontrol"
    />
    <DesktopNavLink
      disabled={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="globe"
      text="Dashboard"
      to="/courses/0/dashboard"
    />
    <DesktopNavLink
      disabled={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
          "md",
        ]
      }
      icon="mobile-video"
      text="Sourcereel"
      to="/courses/0/sourcereel"
    />
    <DesktopNavLink
      disabled={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
          "md",
        ]
      }
      icon="form"
      text="Team Formation"
      to="/courses/0/teamformation"
    />
    <DesktopNavLink
      disabled={true}
      hasNotifications={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
          "md",
        ]
      }
      icon="endorsed"
      text="Grading"
      to="/courses/0/grading"
    />
    <DesktopNavLink
      disabled={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
          "md",
        ]
      }
      icon="crown"
      text="Game Simulator"
      to="/courses/0/gamesimulator"
    />
    <DesktopNavLink
      disabled={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
          "md",
          "lg",
        ]
      }
      icon="settings"
      text="Admin Panel"
      to="/courses/0/adminpanel"
    />
  </Blueprint6.NavbarGroup>
</Blueprint6.Navbar>
`;

exports[`MissionControl, GroundControl, Sourcereel, GameSimulator, Dashboard, Grading, Team Formation and AdminPanel NavLinks render for Role.Admin 1`] = `
<Blueprint6.Navbar
  className="NavigationBar secondary-navbar"
>
  <Blueprint6.NavbarGroup
    align="left"
  >
    <DesktopNavLink
      disabled={false}
      hasNotifications={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="flame"
      text="Missions"
      to="/courses/0/missions"
    />
    <DesktopNavLink
      disabled={false}
      hasNotifications={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="lightbulb"
      text="Quests"
      to="/courses/0/quests"
    />
    <DesktopNavLink
      disabled={false}
      hasNotifications={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="predictive-analysis"
      text="Paths"
      to="/courses/0/paths"
    />
    <DesktopNavLink
      disabled={false}
      hasNotifications={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="comparison"
      text="Contests"
      to="/courses/0/contests"
    />
    <DesktopNavLink
      disabled={false}
      hasNotifications={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="manual"
      text="Others"
      to="/courses/0/others"
    />
  </Blueprint6.NavbarGroup>
  <Blueprint6.NavbarGroup
    align="right"
  >
    <DesktopNavLink
      disabled={false}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="satellite"
      text="Ground Control"
      to="/courses/0/groundcontrol"
    />
    <DesktopNavLink
      disabled={false}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="globe"
      text="Dashboard"
      to="/courses/0/dashboard"
    />
    <DesktopNavLink
      disabled={false}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
          "md",
        ]
      }
      icon="mobile-video"
      text="Sourcereel"
      to="/courses/0/sourcereel"
    />
    <DesktopNavLink
      disabled={false}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
          "md",
        ]
      }
      icon="form"
      text="Team Formation"
      to="/courses/0/teamformation"
    />
    <DesktopNavLink
      disabled={false}
      hasNotifications={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
          "md",
        ]
      }
      icon="endorsed"
      text="Grading"
      to="/courses/0/grading"
    />
    <DesktopNavLink
      disabled={false}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
          "md",
        ]
      }
      icon="crown"
      text="Game Simulator"
      to="/courses/0/gamesimulator"
    />
    <DesktopNavLink
      disabled={false}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
          "md",
          "lg",
        ]
      }
      icon="settings"
      text="Admin Panel"
      to="/courses/0/adminpanel"
    />
  </Blueprint6.NavbarGroup>
</Blueprint6.Navbar>
`;

exports[`MissionControl, GroundControl, Sourcereel, GameSimulator, Dashboard, Team Formation and Grading NavLinks render for Role.Staff 1`] = `
<Blueprint6.Navbar
  className="NavigationBar secondary-navbar"
>
  <Blueprint6.NavbarGroup
    align="left"
  >
    <DesktopNavLink
      disabled={false}
      hasNotifications={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="flame"
      text="Missions"
      to="/courses/0/missions"
    />
    <DesktopNavLink
      disabled={false}
      hasNotifications={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="lightbulb"
      text="Quests"
      to="/courses/0/quests"
    />
    <DesktopNavLink
      disabled={false}
      hasNotifications={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="predictive-analysis"
      text="Paths"
      to="/courses/0/paths"
    />
    <DesktopNavLink
      disabled={false}
      hasNotifications={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="comparison"
      text="Contests"
      to="/courses/0/contests"
    />
    <DesktopNavLink
      disabled={false}
      hasNotifications={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="manual"
      text="Others"
      to="/courses/0/others"
    />
  </Blueprint6.NavbarGroup>
  <Blueprint6.NavbarGroup
    align="right"
  >
    <DesktopNavLink
      disabled={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="satellite"
      text="Ground Control"
      to="/courses/0/groundcontrol"
    />
    <DesktopNavLink
      disabled={false}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
        ]
      }
      icon="globe"
      text="Dashboard"
      to="/courses/0/dashboard"
    />
    <DesktopNavLink
      disabled={false}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
          "md",
        ]
      }
      icon="mobile-video"
      text="Sourcereel"
      to="/courses/0/sourcereel"
    />
    <DesktopNavLink
      disabled={false}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
          "md",
        ]
      }
      icon="form"
      text="Team Formation"
      to="/courses/0/teamformation"
    />
    <DesktopNavLink
      disabled={false}
      hasNotifications={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
          "md",
        ]
      }
      icon="endorsed"
      text="Grading"
      to="/courses/0/grading"
    />
    <DesktopNavLink
      disabled={false}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
          "md",
        ]
      }
      icon="crown"
      text="Game Simulator"
      to="/courses/0/gamesimulator"
    />
    <DesktopNavLink
      disabled={true}
      hiddenInBreakpoints={
        [
          "xs",
          "sm",
          "md",
          "lg",
        ]
      }
      icon="settings"
      text="Admin Panel"
      to="/courses/0/adminpanel"
    />
  </Blueprint6.NavbarGroup>
</Blueprint6.Navbar>
`;
